--- a/Tasks/task7(CSS).html
+++ b/Tasks/task7(CSS).html
@@ -4,7 +4,8 @@
 <style>
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #762828;
+  
 }
 
 * {
