--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@
     </tr>
     <tr>
         <td> Task 1</td>
-        <td><a href="file:///C:/Users/vuppa/Desktop/academic%20material/Web%20dev/MERN/Tasks/Task1.html">Task1 link </a> </td>
+        <td><a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\Html\Task1.html">Task1 link </a> </td>
     </tr>
     <tr>
         <td> Task 2</td>
-        <td><a href="file:///C:/Users/vuppa/Desktop/academic%20material/Web%20dev/MERN/Tasks/Task2.html"> Task2 Link</a></td>
+        <td><a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\Html\Task2.html"   > Task2 Link</a></td>
     </tr>
     <tr>
         <td> Task 3</td>
-        <td> <a href="file:///C:/Users/vuppa/Desktop/academic%20material/Web%20dev/MERN/Tasks/task3.html">Task3 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\Html\task3.html">Task3 Link</a></td>
     </tr>
     <tr>
         <td> Task 4</td>
-        <td> <a href="file:///C:/Users/vuppa/Desktop/academic%20material/Web%20dev/MERN/Tasks/task4.html">Task4 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\Html\task4.html">Task4 Link</a></td>
     </tr>
     <tr>
         <td> Task 5</td>
-        <td> <a href="file:///C:/Users/vuppa/Desktop/academic%20material/Web%20dev/MERN/Tasks/task5.html">Task5 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\Html\task5.html">Task5 Link</a></td>
     </tr>
 </table>
 <br>
@@ -48,31 +48,31 @@
     </tr>
     <tr>
         <td> Task 1</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task1 (CSS).html">Task1 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\css\task1 (CSS).html">Task1 Link</a></td>
     </tr>
     <tr>
         <td> Task 2</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task2(CSS).html">Task2 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\css\task2(CSS).html">Task2 Link</a></td>
     </tr>
     <tr>
         <td> Task 3</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task3 (CSS).html">Task3 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\css\task3 (CSS).html">Task3 Link</a></td>
     </tr>
     <tr>
         <td> Task 4</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task4 (CSS).html">Task4 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\css\task4 (CSS).html">Task4 Link</a></td>
     </tr>
     <tr>
         <td> Task 5</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task5 (CSS).html">Task5 Link</a></td>
+        <td> <a href=file:///C:/Users/vuppa/Desktop/academic%20material/Web%20dev/MERN/Tasks/css/task5%20(CSS).html>Task5 Link</a></td>
     </tr>
     <tr>
         <td> Task 6</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task6(CSS).html">Task6 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\css\task6(CSS).html">Task6 Link</a></td>
     </tr>
     <tr>
         <td> Task 7</td>
-        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\task7(CSS).html">Task7 Link</a></td>
+        <td> <a href="C:\Users\vuppa\Desktop\academic material\Web dev\MERN\Tasks\css\task7(CSS).html">Task7 Link</a></td>
     </tr>
 </table>
 
