--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </tr>
     <tr>
         <td> Task 1</td>
-        <td><a href="Html\Task1.html">Task1 link </a> </td>
+        <td><a href=".\Html\Task1.html">Task1 link </a> </td>
     </tr>
     <tr>
         <td> Task 2</td>
